--- a/dev/blocks/slider/slider.sass
+++ b/dev/blocks/slider/slider.sass
@@ -1,7 +1,12 @@
 .slider
-  height: 540px
   position: relative
-  background: #e8603a
+  box-sizing: content-box
+  border-left: 10px solid #ffffff
+  border-right: 10px solid #ffffff
 
 .slider_fade
   background: transparent
+
+@media screen and (max-width: 1000px)
+  .slider
+    border: 0
