--- a/dev/blocks/logo/logo.sass
+++ b/dev/blocks/logo/logo.sass
@@ -2,10 +2,22 @@
   font-family: Bebas, sans-serif
   text-transform: uppercase
   font-size: 36px
-  padding-top: 10px
+  height: 72px
+  display: flex
+  align-items: center
 
 .logo__first
   color: #e8603a
 
 .logo__last
   color: #f2af9e
+
+@media screen and (max-width: 560px)
+  .logo
+    height: 64px
+    font-size: 28px
+
+@media screen and (max-width: 480px)
+  .logo
+    height: 60px
+    font-size: 24px
