--- a/dev/blocks/container/container.sass
+++ b/dev/blocks/container/container.sass
@@ -1,9 +1,10 @@
 .container
+  box-sizing: content-box
   display: flex
   width: 940px
   margin: auto
   background: #ffffff
 
-@media screen and (max-width: 960px)
+@media screen and (max-width: 975px)
   .container
-    width: 100%
+    width: 98%
