--- a/dev/blocks/navbar/navbar.sass
+++ b/dev/blocks/navbar/navbar.sass
@@ -1,8 +1,12 @@
 .navbar
   width: 100%
+
+.navbar__btn
+  display: none
+
+.navbar__list
   height: 72px
   display: flex
-  flex-direction: row
   justify-content: flex-end
   align-items: center
 
@@ -18,8 +22,88 @@
   text-decoration: none
   transition: color 200ms
   &:hover
-    color: #e8663c
+    color: #f2af9e
 
 .navbar__link_active
   color: #e8663c
   cursor: default
+
+@media screen and (max-width: 680px)
+  .navbar__item
+    padding-left: 20px
+
+@media screen and (max-width: 560px)
+  .navbar__list
+    height: 64px
+
+  .navbar__item
+    padding-left: 15px
+
+  .navbar__link
+    font-size: 15px
+
+@media screen and (max-width: 480px)
+  .navbar__list
+    height: 60px
+
+  .navbar__item
+    padding-left: 10px
+
+  .navbar__link
+    font-size: 14px
+
+@media screen and (max-width: 400px)
+  .navbar__btn
+    display: block
+    position: absolute
+    right: 0
+    top: 10px
+    font-size: 28px
+    line-height: 40px
+    z-index: 100
+    color: #b9b9b9
+    transition: color 500ms
+
+  .navbar__btn:hover
+    color: #f2af9e
+
+  .navbar__btn_blink
+    color: #e8603a
+    &:hover
+      color: #e8603a
+
+  .navbar__list
+    display: flex
+    height: 0
+    overflow: hidden
+    width: 100%
+    position: absolute
+    top: 55px
+    left: 0
+    flex-direction: column
+    justify-content: space-between
+    background: #ffffff
+    transition: height 500ms
+    z-index: 1
+
+  .navbar__list_active
+    opacity: 1
+    z-index: 20
+    height: 245px
+
+  .navbar__item
+    width: 100%
+    height: 100%
+    border-bottom: 1px dotted #dddddd
+    &:first-child
+      border-top: 1px dotted #dddddd
+
+  .navbar__link
+    display: block
+    height: 100%
+    width: 85%
+    position: relative
+    left: 20px
+    font-size: 17px
+    line-height: 48px
+
