--- a/dev/blocks/slider/btn.sass
+++ b/dev/blocks/slider/btn.sass
@@ -2,8 +2,7 @@
   opacity: 0.3
   position: absolute
   z-index: 10
-  top: 160px
-  height: 20px
+  top: 175px
   font-size: 50px
   transition: opacity 200ms
   color: #ffffff
@@ -15,3 +14,24 @@
 
 .slider__btn_right
   right: 0
+
+@media screen and (max-width: 975px)
+  .slider__btn
+    border: 0
+    top: 43%
+    font-size: 40px
+
+@media screen and (max-width: 640px)
+  .slider__btn
+    top: 44%
+    font-size: 30px
+
+@media screen and (max-width: 560px)
+  .slider__btn
+    top: 45%
+    font-size: 25px
+
+@media screen and (max-width: 480px)
+  .slider__btn
+    top: 46%
+    font-size: 20px
