--- a/dev/blocks/navbar/navbar.sass
+++ b/dev/blocks/navbar/navbar.sass
@@ -100,7 +100,7 @@
 
   .navbar__link
     display: block
-    height: 100%
+    //height: 100%
     width: 85%
     position: relative
     left: 20px
