--- a/dev/blocks/navbar/navbar.sass
+++ b/dev/blocks/navbar/navbar.sass
@@ -89,18 +89,17 @@
   .navbar__list_active
     opacity: 1
     z-index: 20
-    height: 245px
+    height: 246px
 
   .navbar__item
     width: 100%
     height: 100%
-    border-bottom: 1px dotted #dddddd
-    &:first-child
-      border-top: 1px dotted #dddddd
+    border-top: 1px dotted #dddddd
+    &:last-child
+      border-bottom: 1px dotted #dddddd
 
   .navbar__link
     display: block
-    //height: 100%
     width: 85%
     position: relative
     left: 20px
