--- a/dev/blocks/thumbs/thumbs.sass
+++ b/dev/blocks/thumbs/thumbs.sass
@@ -37,3 +37,7 @@
 
   .thumbs__thumb
     margin-right: 5px
+
+@media screen and (max-width: 400px)
+  .thumbs__thumb
+    transition: transform 10ms
