finish home page

--- a/dev/blocks/logo/logo.sass
+++ b/dev/blocks/logo/logo.sass
@@ -1,3 +1,5 @@
+@import "../mixins"
+
 .logo
   font-family: Bebas, sans-serif
   text-transform: uppercase
@@ -7,10 +9,10 @@
   align-items: center
 
 .logo__first
-  color: #e8603a
+  color: $base-color
 
 .logo__last
-  color: #f2af9e
+  color: $pale-color
 
 @media screen and (max-width: 560px)
   .logo
