--- a/dev/blocks/thumbs/thumbs.sass
+++ b/dev/blocks/thumbs/thumbs.sass
@@ -3,22 +3,21 @@
   display: flex
   justify-content: space-between
   z-index: 10
+  margin-bottom: 35px
 
 .thumbs__thumb
-  background: #e8603a
+  background: #000000
   margin-right: 10px
   &:last-child
     margin-right: 0
 
 .thumbs__img
+  display: block
   transition: opacity 200ms
   width: 100%
   height: 100%
-  object-fit: fill
-  object-position: center
-
-.thumbs__img:hover
-  opacity: 0.7
+  &:hover
+    opacity: 0.5
 
 @media screen and (max-width: 950px)
   .thumbs
@@ -37,7 +36,3 @@
 
   .thumbs__thumb
     margin-right: 5px
-
-@media screen and (max-width: 400px)
-  .thumbs__thumb
-    transition: transform 10ms
