pug #2 all files are finished

--- a/dev/pug/portfolio.pug
+++ b/dev/pug/portfolio.pug
@@ -1,7 +1,7 @@
-- var page_title = 'blog'
+- var page_title = 'portfolio'
 doctype html
 html(lang="en")
-include head
+include tmpl/head
 body
     .page-wrapper
         .content
