--- a/dev/pug/blog.pug
+++ b/dev/pug/blog.pug
@@ -1,7 +1,7 @@
-- var page_title = 'about us'
+- var page_title = 'blog'
 doctype html
 html(lang="en")
-include head
+include tmpl/head
 body
     .page-wrapper
         .content
