--- a/dev/blocks/navbar/navbar.pug
+++ b/dev/blocks/navbar/navbar.pug
@@ -9,10 +9,14 @@
             .navbar__item
                 a.navbar__link(href='index.html') home
             .navbar__item
-                a.navbar__link(href='about.html') about us
+                a.navbar__link(href='about.html') about
+                    =' '
+                    span.navbar__link_last us
             .navbar__item
                 a.navbar__link(href='blog.html') blog
             .navbar__item
                 a.navbar__link(href='portfolio.html') portfolio
             .navbar__item
-                a.navbar__link(href='contact.html') contact us
+                a.navbar__link(href='contact.html') contact
+                    =' '
+                    span.navbar__link_last us
