--- a/dev/blocks/navbar/navbar.sass
+++ b/dev/blocks/navbar/navbar.sass
@@ -27,6 +27,8 @@
 .navbar__link_active
   color: $base-color
   cursor: default
+  .navbar__link_last
+    color: $pale-color
 
 @media screen and (max-width: 680px)
   .navbar__item
