--- a/dev/blocks/slider/slider.sass
+++ b/dev/blocks/slider/slider.sass
@@ -1,8 +1,8 @@
 .slider
   position: relative
 
-.slider_fade
-  background: transparent
+.slider__img
+  display: block
 
 @media screen and (max-width: 1000px)
   .slider
