--- a/dev/blocks/title/title.sass
+++ b/dev/blocks/title/title.sass
@@ -1,11 +1,11 @@
 @import "../mixins"
 
 .title
-  position: relative
+  //position: relative
   height: 60px
   width: 100%
   background: $head-color
-  z-index: 10
+  //z-index: 10
 
 .title__header
   @include header
