--- a/dev/pug/about.pug
+++ b/dev/pug/about.pug
@@ -1,4 +1,4 @@
-- var page_title = 'about us'
+- var page_title = 'About Us'
 doctype html
 html(lang="en")
 include tmpl/head
@@ -7,4 +7,5 @@ body
         .content
             include ../blocks/navbar/navbar
             include ../blocks/title/title
+            include ../blocks/about/about
         include ../blocks/footer/footer
