--- a/dev/pug/blog.pug
+++ b/dev/pug/blog.pug
@@ -1,4 +1,4 @@
-- var page_title = 'blog'
+- var page_title = 'Blog'
 doctype html
 html(lang="en")
 include tmpl/head
@@ -7,4 +7,5 @@ body
         .content
             include ../blocks/navbar/navbar
             include ../blocks/title/title
+            include ../blocks/blog/blog
         include ../blocks/footer/footer
