--- a/dev/blocks/mixins.sass
+++ b/dev/blocks/mixins.sass
@@ -13,6 +13,7 @@ $trans-bg-color: rgba(232, 96, 58, 0.8)
 @mixin text
   font-family: "Open Sans", sans-serif
   font-size: 12px
-  font-weight: 600
-  color: #ffffff
-  margin-bottom: 0
+
+@mixin content
+  margin: 25px 50px 50px 0
+  flex: 3
