--- a/dev/blocks/slider/info.sass
+++ b/dev/blocks/slider/info.sass
@@ -4,9 +4,11 @@
   position: absolute
   bottom: 6%
   left: 3%
+  height: 24%
   width: 32%
   background: $trans-bg-color
   padding: 20px
+  overflow: hidden
 
 .slider__header
   @include header
@@ -15,6 +17,10 @@
 
 .slider__text
   @include text
+  color: #ffffff
+  font-weight: 600
+  margin-bottom: 0
+  text-overflow: ellipsis
 
 @media screen and (max-width: 950px)
   .slider__info
@@ -26,10 +32,7 @@
   .slider__text
     font-size: 10px
 
-@media screen and (max-width: 680px)
-  .slider__info
-    width: 35%
-
+@media screen and (max-width: 800px)
   .slider__header
     font-size: 12px
 
@@ -39,40 +42,55 @@
 
 @media screen and (max-width: 640px)
   .slider__info
-    width: 45%
-    padding: 5px
+    width: 42%
 
-  .slider__header
-    font-size: 12px
-
-  .slider__text
-    font-size: 10px
-
-@media screen and (max-width: 560px)
+@media screen and (max-width: 620px)
   .slider__info
     padding-top: 0
-    width: 55%
+    width: 48%
 
   .slider__header
     font-size: 10px
+
+@media screen and (max-width: 540px)
+  .slider__header
+    font-size: 9px
+
+  .slider__text
+    font-size: 8px
 
 @media screen and (max-width: 480px)
   .slider__info
-    left: 6%
-    width: 65%
-    padding: 4px
+    width: 56%
+
+  .slider__header
+    font-size: 8px
 
 @media screen and (max-width: 420px)
   .slider__info
-    width: 75%
+    width: 64%
+
+  .slider__text
+    font-size: 7px
 
 @media screen and (max-width: 380px)
+  .slider__info
+    padding-top: 4px
+
   .slider__text
+    padding-top: 4px
+    font-size: 10px
     white-space: nowrap
     overflow: hidden
     text-overflow: ellipsis
 
+  .slider__header
+    font-size: 12px
+
 
 @media screen and (max-width: 300px)
+  .slider__info
+    width: 32%
+
   .slider__text
     display: none
