--- a/dev/blocks/fonts-styles/awesome-codes.css
+++ b/dev/blocks/fonts-styles/awesome-codes.css
@@ -7,6 +7,7 @@
 .icon-play:before { content: '\e804'; } /* '' */
 .icon-link:before { content: '\e805'; } /* '' */
 .icon-doc:before { content: '\e806'; } /* '' */
+.icon-picture:before { content: '\e807'; } /* '' */
 .icon-docs:before { content: '\f0c5'; } /* '' */
 .icon-menu:before { content: '\f0c9'; } /* '' */
 .icon-doc-text:before { content: '\f0f6'; } /* '' */
