--- a/dev/blocks/mixins.sass
+++ b/dev/blocks/mixins.sass
@@ -1,7 +1,10 @@
 $base-color: #e8603a
 $pale-color: #f2af9e
 $head-color: #e7663c
+$noact-head-color: #b9b9b9
+$menu-bd-color: #dddddd
 $trans-bg-color: rgba(232, 96, 58, 0.8)
+
 
 @mixin header
   font-family: "Bebas", sans-serif
@@ -15,5 +18,5 @@ $trans-bg-color: rgba(232, 96, 58, 0.8)
   font-size: 12px
 
 @mixin content
-  margin: 25px 50px 50px 0
+  margin: 25px 50px 45px 0
   flex: 3
