--- a/dev/blocks/navbar/navbar.pug
+++ b/dev/blocks/navbar/navbar.pug
@@ -2,21 +2,21 @@
     .logo
         span.logo__first jet
         span.logo__last ro
-    .navbar
+    nav.navbar
         .navbar__btn
             i.icon-menu
-        .navbar__list
-            .navbar__item
+        ul.navbar__list
+            li.navbar__item
                 a.navbar__link(href='index.html') home
-            .navbar__item
+            li.navbar__item
                 a.navbar__link(href='about.html') about
                     =' '
                     span.navbar__link_last us
-            .navbar__item
+            li.navbar__item
                 a.navbar__link(href='blog.html') blog
-            .navbar__item
+            li.navbar__item
                 a.navbar__link(href='portfolio.html') portfolio
-            .navbar__item
+            li.navbar__item
                 a.navbar__link(href='contact.html') contact
                     =' '
                     span.navbar__link_last us
