--- a/dev/blocks/blog/blog.pug
+++ b/dev/blocks/blog/blog.pug
@@ -3,9 +3,7 @@
         .blog__postlist
             .blog__post
                 .blog__iconbox
-                    svg.blog__icon(width="85" height="100" viewBox="0 0 85 100")
-                        path(d="M15.158 92.429v-7.576H.006V0h69.7v15.152h15.152v84.853h-69.7v-7.576zm63.64-40.911V21" +
-                        ".213h-57.58v60.609h57.58V51.518zM15.157 40.91V15.152h48.488V6.061H6.066V66.67h9.092V40.911z")
+                    i.blog__icon.icon-picture
                 .blog__pic
                     .slider
                         .slider__slide
@@ -21,87 +19,89 @@
                         .slider__slide
                             img.slider__img(src='img/slide_6.png', alt='slide')
                         .slider__btnbox.slider__btnbox_left
-                            svg.slider__btn(width="85" height="100" viewBox="0 0 85 100")
-                                path(d="M75.878 90.888l9.075-9.112L69.2 65.874 53.445 49.973l15.777-15.925L85 18.122l-9.162-9" +
-                                ".06L66.676 0 41.838 24.996 17 49.992l24.902 25.004L66.804 100l9.074-9.112z")
+                            svg.slider__btn(width="32" height="32" viewBox="0 0 32 32")
+                                path(d="M24.049 29.084l2.936-2.916-5.097-5.088-5.097-5.089 5.104-5.095L27 5.8l-2" +
+                                ".964-2.9L21.072 0l-8.036 7.999L5 15.997 13.056 24l8.057 8 2.936-2.916z")
                         .slider__btnbox.slider__btnbox_right
-                            svg.slider__btn(width="85" height="100" viewBox="0 0 85 100")
-                                path(d="M9.122 90.888L.047 81.776 15.8 65.874l15.754-15.901-15.777-15.925L0 18.122l9.162-9.06L18" +
-                                ".324 0l24.838 24.996L68 49.992 43.098 74.996 18.196 100l-9.074-9.112z")
-                .blog__info
-                    .blog__info-title date
-                    .blog__info-text april 15, 2012
-                    .blog__info-title tags
-                    .blog__info-text website | design
-                    .blog__info-title comments
-                    .blog__info-text 4
+                            svg.slider__btn(width="32" height="32" viewBox="0 0 32 32")
+                                path(d="M7.951 29.084l-2.936-2.916 5.097-5.088 5.097-5.089-5.104-5.095L5 5.8l2.964-2" +
+                                ".9L10.928 0l8.036 7.999L27 15.997 18.944 24l-8.057 8-2.936-2.916z")
                 .blog__text
-                    .blog__header top wordpress themes of 2012
-                    .blog__paragraph Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut digniss
-                        | libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum porro
-                        | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem expedita
-                        | facilis impedit laudantium magnam minus nesciunt nihil nobis nulla officia optio porro quaer
-                        | qui quod ratione tempora ut, voluptas. Alias, amet autem commodi consequuntur cupiditate
-                        | eligendi excepturi expedita fuga fugiat fugit illo itaque magnam nemo qui quisquam rem sequi
-                        | velit! Amet, autem culpa doloribus ex fugit necessitatibus nihil nulla quia, quos reiciendis
-                        | unde? Distinctio et eveniet exercitationem, expedita quam quo voluptas.
-                    .blog__paragraph Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut digniss
-                        | libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum porro
-                        | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem expedita
-                        | facilis impedit laudantium.
+                    .blog__info
+                        .blog__info-title date
+                        .blog__info-text april 15, 2012
+                        .blog__info-title tags
+                        .blog__info-text website | design
+                        .blog__info-title comments
+                        .blog__info-text 4
+                    .blog__article
+                        .blog__header top wordpress themes of 2012
+                        .blog__paragraph Consectetur adipisicing elit. Asperiores aut digniss
+                            | libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum
+                            | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem
+                            | facilis impedit laudantium magnam minus nesciunt nihil nobis nulla officia optio porro
+                            | qui quod ratione tempora ut, voluptas. Excepturi expedita fuga fugiat fugit illo.
+                        .blog__paragraph Dolor sit amet, consectetur adipisicing elit. Asperiores aut digniss
+                            | libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum por
+                            | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem exped
+                            | facilis impedit laudantium.
+                .blog__line
             .blog__post
                 .blog__iconbox
-                    svg.blog__icon(width="85" height="100" viewBox="0 0 85 100")
-                        path(d="M0 50V0h50v8H8v84h69V35h8v65H0zM53 0l32 32H53V16z")
-                        path(d="M16 32v4h32v-4H16zm0 8v4h46.929v-4H16zm0 8v4h46.929v-4H16zm0 16v4h46" +
-                        ".929v-4H16zm0-8v4h46.929v-4H16zm0 16v4h46.929v-4H16zm0 8v4h46.929v-4H16zm0-56v4h32v-4H16z")
+                    i.blog__icon.icon-doc-text
 
                 .blog__pic
-                .blog__info
-                    .blog__info-title date
-                    .blog__info-text april 15, 2012
-                    .blog__info-title tags
-                    .blog__info-text website | design
-                    .blog__info-title comments
-                    .blog__info-text 4
+                    img.blog__img(src="img/jesus.png")
                 .blog__text
-                    .blog__header top wordpress themes of 2012
-                    .blog__paragraph Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut digniss
-                        | libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum porro
-                        | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem expedita
-                        | facilis impedit laudantium magnam minus nesciunt nihil nobis nulla officia optio porro quaer
-                        | qui quod ratione tempora ut, voluptas. Alias, amet autem commodi consequuntur cupiditate
-                        | eligendi excepturi expedita fuga fugiat fugit illo itaque magnam nemo qui quisquam rem sequi
-                        | velit! Amet, autem culpa doloribus ex fugit necessitatibus nihil nulla quia, quos reiciendis
-                        | unde? Distinctio et eveniet exercitationem, expedita quam quo voluptas.
-                    .blog__paragraph Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut digniss
-                        | libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum porro
-                        | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem expedita
-                        | facilis impedit laudantium.
+                    .blog__info
+                        .blog__info-title date
+                        .blog__info-text april 15, 2012
+                        .blog__info-title tags
+                        .blog__info-text website | design
+                        .blog__info-title comments
+                        .blog__info-text 4
+                    .blog__article
+                        .blog__header top wordpress themes of 2012
+                        .blog__paragraph Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut digniss
+                            | libero maiores molestiae reiciendis! Alias, amet autem commodi consequuntur cupiditate
+                            | eligendi excepturi expedita fuga fugiat fugit illo itaque magnam nemo qui quisquam rem sequi
+                            | velit! Amet, autem culpa doloribus ex fugit necessitatibus nihil nulla quia, quos reiciendis
+                            | unde? Distinctio et eveniet exercitationem, expedita quam quo voluptas.
+                        .blog__paragraph Consectetur adipisicing elit. Asperiores aut digniss
+                            | libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum porro
+                            | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem expedita
+                            | facilis impedit laudantium.
+                .blog__line
             .blog__post
                 .blog__iconbox
-                    svg.blog__icon(width="85" height="100" viewBox="0 0 85 100")
-                        path(d="M0 0l40.01 24.602L81.315 50l-41.66 25.617L0 100V49.93z")
+                    i.blog__icon.icon-play
                 .blog__pic
-                .blog__info
-                    .blog__info-title date
-                    .blog__info-text april 15, 2012
-                    .blog__info-title tags
-                    .blog__info-text website | design
-                    .blog__info-title comments
-                    .blog__info-text 4
+                    iframe.blog__video(src="https://player.vimeo.com/video/186134953" width="670" height="380"
+                    frameborder="0"
+                    webkitallowfullscreen mozallowfullscreen allowfullscreen)
                 .blog__text
-                    .blog__header top wordpress themes of 2012
-                    .blog__paragraph Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut digniss
-                        | libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum porro
-                        | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem expedita
-                        | facilis impedit laudantium magnam minus nesciunt nihil nobis nulla officia optio porro quaer
-                        | qui quod ratione tempora ut, voluptas. Alias, amet autem commodi consequuntur cupiditate
-                        | eligendi excepturi expedita fuga fugiat fugit illo itaque magnam nemo qui quisquam rem sequi
-                        | velit! Amet, autem culpa doloribus ex fugit necessitatibus nihil nulla quia, quos reiciendis
-                        | unde? Distinctio et eveniet exercitationem, expedita quam quo voluptas.
-                    .blog__paragraph Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut digniss
-                        | libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum porro
-                        | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem expedita
-                        | facilis impedit laudantium.
+                    .blog__info
+                        .blog__info-title date
+                        .blog__info-text april 15, 2012
+                        .blog__info-title tags
+                        .blog__info-text website | design
+                        .blog__info-title comments
+                        .blog__info-text 4
+                    .blog__article
+                        .blog__header top wordpress themes of 2012
+                        .blog__paragraph Adipisci aliquid consequatur doloribus et ipsum porro
+                            | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem expedita
+                            | facilis impedit laudantium magnam minus nesciunt nihil nobis nulla officia optio porro quaer
+                            | qui quod ratione tempora ut, voluptas. Alias, amet autem commodi consequuntur cupiditate
+                            | eligendi excepturi expedita fuga fugiat fugit illo itaque magnam nemo qui quisquam rem sequi
+                            | velit! Amet, autem culpa doloribus ex fugit necessitatibus nihil nulla quia, quos reiciendis
+                            | unde? Distinctio et eveniet exercitationem, expedita quam quo voluptas.
+                        .blog__paragraph Adipisci aliquid consequatur doloribus et ipsum porro
+                            | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem expedita
+                            | facilis impedit laudantium. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                .blog__line
+            .paginator
+                .paginator__item.paginator__item_active 1
+                .paginator__item 2
+                .paginator__item 3
         include ../sidebar/sidebar
