--- a/dev/blocks/fonts-styles/awesome.css
+++ b/dev/blocks/fonts-styles/awesome.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'awesome';
-  src: url('../font/awesome.eot?29213912');
-  src: url('../font/awesome.eot?29213912#iefix') format('embedded-opentype'),
-       url('../font/awesome.woff2?29213912') format('woff2'),
-       url('../font/awesome.woff?29213912') format('woff'),
-       url('../font/awesome.ttf?29213912') format('truetype'),
-       url('../font/awesome.svg?29213912#awesome') format('svg');
+  src: url('../font/awesome.eot?57818113');
+  src: url('../font/awesome.eot?57818113#iefix') format('embedded-opentype'),
+       url('../font/awesome.woff2?57818113') format('woff2'),
+       url('../font/awesome.woff?57818113') format('woff'),
+       url('../font/awesome.ttf?57818113') format('truetype'),
+       url('../font/awesome.svg?57818113#awesome') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'awesome';
-    src: url('../font/awesome.svg?29213912#awesome') format('svg');
+    src: url('../font/awesome.svg?57818113#awesome') format('svg');
   }
 }
 */
@@ -63,6 +63,7 @@
 .icon-play:before { content: '\e804'; } /* '' */
 .icon-link:before { content: '\e805'; } /* '' */
 .icon-doc:before { content: '\e806'; } /* '' */
+.icon-picture:before { content: '\e807'; } /* '' */
 .icon-docs:before { content: '\f0c5'; } /* '' */
 .icon-menu:before { content: '\f0c9'; } /* '' */
 .icon-doc-text:before { content: '\f0f6'; } /* '' */
