--- a/dev/blocks/navbar/navbar.sass
+++ b/dev/blocks/navbar/navbar.sass
@@ -7,6 +7,7 @@
   display: none
 
 .navbar__list
+  margin: 0
   height: 72px
   display: flex
   justify-content: flex-end
@@ -15,18 +16,21 @@
 .navbar__item
   @include header
   padding-left: 25px
+  list-style: none
 
 .navbar__link
   font-size: 16px
-  color: #b9b9b9
+  color: $noact-head-color
   text-decoration: none
   transition: color 200ms
   &:hover
-    color: #f2af9e
+    color: $pale-color
 
 .navbar__link_active
   color: $base-color
   cursor: default
+  &:hover
+    color: $base-color
   .navbar__link_last
     color: $pale-color
 
@@ -64,11 +68,11 @@
     font-size: 28px
     line-height: 40px
     z-index: 100
-    color: #b9b9b9
+    color: $noact-head-color
     transition: color 500ms
 
   .navbar__btn:hover
-    color: #f2af9e
+    color: $pale-color
 
   .navbar__btn_blink
     color: $base-color
@@ -76,6 +80,7 @@
       color: $base-color
 
   .navbar__list
+    padding: 0
     display: flex
     height: 0
     overflow: hidden
@@ -97,9 +102,9 @@
   .navbar__item
     width: 100%
     height: 100%
-    border-top: 1px dotted #dddddd
+    border-top: 1px dotted $menu-bd-color
     &:last-child
-      border-bottom: 1px dotted #dddddd
+      border-bottom: 1px dotted $menu-bd-color
 
   .navbar__link
     display: block
