--- a/dev/blocks/slider/slider.pug
+++ b/dev/blocks/slider/slider.pug
@@ -51,10 +51,10 @@
                         | Accusantium aliquid aspernatur exercitationem facilis numquam tenetur voluptas? Ab
                         | commodi eius enim.
             .slider__btnbox.slider__btnbox_left
-                svg.slider__btn(width="85" height="100" viewBox="0 0 85 100")
-                    path(d="M75.878 90.888l9.075-9.112L69.2 65.874 53.445 49.973l15.777-15.925L85 18.122l-9.162-9" +
-                    ".06L66.676 0 41.838 24.996 17 49.992l24.902 25.004L66.804 100l9.074-9.112z")
+                svg.slider__btn(width="32" height="32" viewBox="0 0 32 32")
+                    path(d="M24.049 29.084l2.936-2.916-5.097-5.088-5.097-5.089 5.104-5.095L27 5.8l-2" +
+                    ".964-2.9L21.072 0l-8.036 7.999L5 15.997 13.056 24l8.057 8 2.936-2.916z")
             .slider__btnbox.slider__btnbox_right
-                svg.slider__btn(width="85" height="100" viewBox="0 0 85 100")
-                    path(d="M9.122 90.888L.047 81.776 15.8 65.874l15.754-15.901-15.777-15.925L0 18.122l9.162-9.06L18" +
-                    ".324 0l24.838 24.996L68 49.992 43.098 74.996 18.196 100l-9.074-9.112z")
+                svg.slider__btn(width="32" height="32" viewBox="0 0 32 32")
+                    path(d="M7.951 29.084l-2.936-2.916 5.097-5.088 5.097-5.089-5.104-5.095L5 5.8l2.964-2" +
+                    ".9L10.928 0l8.036 7.999L27 15.997 18.944 24l-8.057 8-2.936-2.916z")
