--- a/dev/blocks/navbar/navbar.sass
+++ b/dev/blocks/navbar/navbar.sass
@@ -20,7 +20,7 @@
 
 .navbar__link
   font-size: 16px
-  color: $noact-head-color
+  color: $noactive-color
   text-decoration: none
   transition: color 200ms
   &:hover
@@ -68,7 +68,7 @@
     font-size: 28px
     line-height: 40px
     z-index: 100
-    color: $noact-head-color
+    color: $noactive-color
     transition: color 500ms
 
   .navbar__btn:hover
