--- a/dev/blocks/recent/recent.pug
+++ b/dev/blocks/recent/recent.pug
@@ -1,25 +1,25 @@
-.container.recent
-    .recent__card
-        a.recent__link(href='#')
-            img.recent__img(src='../img/work_1.png', alt='work')
-        .recent__info
-            .recent__title character disign
-            .recent__date june 15, 2012
-    .recent__card
-        a.recent__link(href='#')
-            img.recent__img(src='../img/work_2.png', alt='work')
-        .recent__info
-            .recent__title brochure disign
-            .recent__date june 15, 2012
-    .recent__card
-        a.recent__link(href='#')
-            img.recent__img(src='../img/work_3.png', alt='work')
-        .recent__info
-            .recent__title social media buttons
-            .recent__date june 15, 2012
-    .recent__card
-        a.recent__link(href='#')
-            img.recent__img(src='../img/work_4.png', alt='work')
-        .recent__info
-            .recent__title 10 amazing websites
-            .recent__date june 15, 2012
+.container.work-list
+    .work-card
+        a.work-card__link(href='#')
+            img.work-card__img(src='../img/work_1.png', alt='work')
+        .work-card__info
+            .work-card__title character disign
+            .work-card__date june 15, 2012
+    .work-card
+        a.work-card__link(href='#')
+            img.work-card__img(src='../img/work_2.png', alt='work')
+        .work-card__info
+            .work-card__title brochure disign
+            .work-card__date june 15, 2012
+    .work-card
+        a.work-card__link(href='#')
+            img.work-card__img(src='../img/work_3.png', alt='work')
+        .work-card__info
+            .work-card__title social media buttons
+            .work-card__date june 15, 2012
+    .work-card
+        a.work-card__link(href='#')
+            img.work-card__img(src='../img/work_4.png', alt='work')
+        .work-card__info
+            .work-card__title 10 amazing websites
+            .work-card__date june 15, 2012
