--- a/dev/pug/portfolio.pug
+++ b/dev/pug/portfolio.pug
@@ -7,4 +7,5 @@ body
         .content
             include ../blocks/navbar/navbar
             include ../blocks/title/title
+            include ../blocks/portfolio/portfolio
         include ../blocks/footer/footer
