--- a/dev/blocks/blog/blog.pug
+++ b/dev/blocks/blog/blog.pug
@@ -35,13 +35,13 @@
                         .blog__info-title comments
                         .blog__info-text 4
                     .blog__article
-                        .blog__header top wordpress themes of 2012
-                        .blog__paragraph Consectetur adipisicing elit. Asperiores aut digniss
+                        h2.blog__header top wordpress themes of 2012
+                        p Consectetur adipisicing elit. Asperiores aut digniss
                             | libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum
                             | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem
                             | facilis impedit laudantium magnam minus nesciunt nihil nobis nulla officia optio porro
                             | qui quod ratione tempora ut, voluptas. Excepturi expedita fuga fugiat fugit illo.
-                        .blog__paragraph Dolor sit amet, consectetur adipisicing elit. Asperiores aut digniss
+                        p Dolor sit amet, consectetur adipisicing elit. Asperiores aut digniss
                             | libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum por
                             | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem exped
                             | facilis impedit laudantium.
@@ -51,7 +51,7 @@
                     i.blog__icon.icon-doc-text
 
                 .blog__pic
-                    img.blog__img(src="img/jesus.png")
+                    img(src="img/jesus.png")
                 .blog__text
                     .blog__info
                         .blog__info-title date
@@ -61,24 +61,24 @@
                         .blog__info-title comments
                         .blog__info-text 4
                     .blog__article
-                        .blog__header top wordpress themes of 2012
-                        .blog__paragraph Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut digniss
+                        h2.blog__header top wordpress themes of 2012
+                        p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut digniss
                             | libero maiores molestiae reiciendis! Alias, amet autem commodi consequuntur cupiditate
-                            | eligendi excepturi expedita fuga fugiat fugit illo itaque magnam nemo qui quisquam rem sequi
-                            | velit! Amet, autem culpa doloribus ex fugit necessitatibus nihil nulla quia, quos reiciendis
+                            | eligendi excepturi expedita fuga fugiat fugit illo itaque magnam nemo qui quisquam rem se
+                            | velit! Amet, autem culpa doloribus ex fugit necessitatibus nihil nulla quia, quos reicie
                             | unde? Distinctio et eveniet exercitationem, expedita quam quo voluptas.
-                        .blog__paragraph Consectetur adipisicing elit. Asperiores aut digniss
-                            | libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum porro
-                            | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem expedita
+                        p Consectetur adipisicing elit. Asperiores aut digniss
+                            | libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum pur
+                            | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem expedo
                             | facilis impedit laudantium.
                 .blog__line
             .blog__post
                 .blog__iconbox
                     i.blog__icon.icon-play
                 .blog__pic
-                    iframe.blog__video(src="https://player.vimeo.com/video/186134953" width="670" height="380"
-                    frameborder="0"
-                    webkitallowfullscreen mozallowfullscreen allowfullscreen)
+                    .media
+                        iframe(src="https://player.vimeo.com/video/186134953" width="670" height="380" frameborder="0"
+                        webkitallowfullscreen mozallowfullscreen allowfullscreen)
                 .blog__text
                     .blog__info
                         .blog__info-title date
@@ -88,20 +88,38 @@
                         .blog__info-title comments
                         .blog__info-text 4
                     .blog__article
-                        .blog__header top wordpress themes of 2012
-                        .blog__paragraph Adipisci aliquid consequatur doloribus et ipsum porro
-                            | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem expedita
-                            | facilis impedit laudantium magnam minus nesciunt nihil nobis nulla officia optio porro quaer
-                            | qui quod ratione tempora ut, voluptas. Alias, amet autem commodi consequuntur cupiditate
-                            | eligendi excepturi expedita fuga fugiat fugit illo itaque magnam nemo qui quisquam rem sequi
-                            | velit! Amet, autem culpa doloribus ex fugit necessitatibus nihil nulla quia, quos reiciendis
+                        h2.blog__header top wordpress themes of 2012
+                        p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut digniss
+                            | libero maiores molestiae reiciendis! Alias, amet autem commodi consequuntur cupiditate
+                            | eligendi excepturi expedita fuga fugiat fugit illo itaque magnam nemo qui quisquam rem
+                            | velit! Amet, autem culpa doloribus ex fugit necessitatibus nihil nulla quia, quos reicie
                             | unde? Distinctio et eveniet exercitationem, expedita quam quo voluptas.
-                        .blog__paragraph Adipisci aliquid consequatur doloribus et ipsum porro
-                            | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem expedita
-                            | facilis impedit laudantium. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        p Consectetur adipisicing elit. Asperiores aut digniss
+                            | libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum per
+                            | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem exped
+                            | facilis impedit laudantium.
                 .blog__line
-            .paginator
-                .paginator__item.paginator__item_active 1
-                .paginator__item 2
-                .paginator__item 3
+            .blog__post
+                .blog__iconbox
+                    i.blog__icon.icon-quote-left
+                .blog__text
+                    .blog__article
+                        .blog__quote
+                            i.icon-quote-left
+                            p Write anything you want here in this quotable area. Something unique you want people to
+                                | learn about your website or some cool random fact. Its totally up to you.
+                .blog__line
+            .blog__post
+                .blog__iconbox
+                    i.blog__icon.icon-link
+                .blog__text
+                    .blog__article
+                        h2.blog__header some of the best freebies on the web.
+                        .blog__link
+                            a(href="#") www.bestpsdfreebies.com
+                            p Adipisci aliquid consequatur doloribus et ipsum porro
+                                | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem expeo
+                                | facilis impedit laudantium magnam minus nesciunt nihil nobis.
+                .blog__line
+            include ../pagination/pagination
         include ../sidebar/sidebar
