--- a/dev/blocks/sidebar/sidebar.sass
+++ b/dev/blocks/sidebar/sidebar.sass
@@ -1,15 +1,16 @@
 @import "../mixins"
 
 .sidebar
-  margin-top: 20px
   flex: 1
+
+.sidebar__section
+  margin-bottom: 30px
 
 .sidebar__text
   @include text
-  margin-top: 0
+  margin: 0
 
 .sidebar__list
   @include text
-  margin-top: 0
   list-style: none
   padding-left: 0
