--- a/dev/blocks/title/title.sass
+++ b/dev/blocks/title/title.sass
@@ -1,15 +1,15 @@
 @import "../mixins"
 
 .title
-  //position: relative
   height: 60px
   width: 100%
   background: $head-color
-  //z-index: 10
+  margin-bottom: 25px
 
 .title__header
   @include header
-  font-size: 22px
+  font-size: 24px
+  font-weight: 500
   color: #ffffff
   margin-left: 20px
   margin-top: 22px
