develop #3 added about and contact pages

--- a/dev/blocks/about/about.pug
+++ b/dev/blocks/about/about.pug
@@ -1,1 +1,47 @@
-.container.portfolio
+.container.about
+    .about__content
+        p.about__text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut dignissimos error, illum
+            |maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum porro praesentium sed
+            |voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem expedita.
+        .about__img
+            img(src="img/about.png", alt="Photo")
+        p.about__text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut dignissimos error, illum
+            |maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum porro praesentium sed
+            |voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem expedita facere facilis
+            |impedit laudantium magnam minus nesciunt nihil nobis nulla officia optio porro quaerat quam quas qui
+            |quod ratione tempora ut, voluptas. Alias, amet autem commodi consequuntur cupiditate distinctio eligendi
+            |excepturi expedita fuga fugiat fugit illo itaque magnam nemo qui quisquam rem sequi sint sit velit!
+            |Amet, autem culpa doloribus ex fugit necessitatibus nihil nulla quia, quos reiciendis sed tenetur unde?
+            |Distinctio et eveniet exercitationem, expedita quam quo voluptas. Accusantium, architecto atque
+            |consectetur consequuntur cum cupiditate debitis deleniti dolor doloremque enim.
+        p.about__text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut dignissimos error, illum
+            |maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum porro praesentium sed
+            |voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem expedita facere facilis
+            |impedit laudantium magnam minus nesciunt nihil nobis nulla officia optio porro quaerat quam quas qui.
+        p.about__text Distinctio et eveniet exercitationem, expedita quam quo voluptas. Accusantium, architecto atque
+            |quod ratione tempora ut, voluptas. Alias, amet autem commodi consequuntur cupiditate distinctio eligendi
+            |excepturi expedita fuga fugiat fugit illo itaque magnam nemo qui quisquam rem sequi sint sit velit!
+            |Amet, autem culpa doloribus ex fugit necessitatibus nihil nulla quia, quos reiciendis sed tenetur unde?
+            |Distinctio et eveniet exercitationem, expedita quam quo voluptas.
+        p.about__text.about__quote Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut dignissimos
+            |maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum porro praesentium sed
+            |excepturi expedita fuga fugiat fugit illo itaque magnam nemo qui quisquam rem sequi sint sit velit!
+            |Amet, autem culpa doloribus ex fugit necessitatibus nihil nulla quia, quos reiciendis sed tenetur unde?
+        p.about__text Distinctio et eveniet exercitationem, expedita quam quo voluptas. Accusantium, architecto atque
+            |impedit laudantium magnam minus nesciunt nihil nobis nulla officia optio porro quaerat quam quas qui
+            |quod ratione tempora ut, voluptas. Alias, amet autem commodi consequuntur cupiditate distinctio eligendi
+            |excepturi expedita fuga fugiat fugit illo itaque magnam nemo qui quisquam rem sequi sint sit velit!
+            |Amet, autem culpa doloribus ex fugit necessitatibus nihil nulla quia, quos reiciendis sed tenetur unde?
+        p.about__text Distinctio et eveniet exercitationem, expedita quam quo voluptas. Accusantium, architecto atque
+            |consectetur consequuntur cum cupiditate debitis deleniti dolor doloremque enim expedita explicabo in
+            |ipsam iste laboriosam laborum laudantium magnam obcaecati officia omnis optio placeat quaerat quia
+            |quisquam quod repellat saepe velit veritatis vero voluptate. Atque delectus, libero. Eaque iure maxime
+        p.about__text Distinctio et eveniet exercitationem, expedita quam quo voluptas. Accusantium, architecto atque
+            |ratione sit tenetur voluptates. Architecto commodi ducimus error est ipsam, laborum, natus nemo non
+            |numquam omnis perferendis perspiciatis possimus quo repellat sit velit voluptatum! Aperiam cumque
+            |cupiditate distinctio error esse explicabo inventore ipsum, minima modi molestiae, non obcaecati, rem
+            |tempora tenetur ut. Amet consequatur culpa, distinctio dolor enim esse facere, incidunt ipsam labore
+            |laboriosam nemo nostrum odit, officia reiciendis sint vitae voluptatem. Aliquid aperiam consequatur,
+            |cumque cupiditate est impedit iure, labore minima nobis optio qui sequi soluta, tempora veniam vitae
+            |voluptates voluptatibus.
+    include ../sidebar/sidebar
