--- a/dev/blocks/mixins.sass
+++ b/dev/blocks/mixins.sass
@@ -1,6 +1,7 @@
 $base-color: #e8603a
 $pale-color: #f2af9e
 $head-color: #e7663c
+$quote-color: #5a5a5a
 $noactive-color: #b9b9b9
 $menu-bd-color: #dddddd
 $trans-bg-color: rgba(232, 96, 58, 0.8)
@@ -17,6 +18,8 @@ $trans-bg-color: rgba(232, 96, 58, 0.8)
 @mixin text
   font-family: "Open Sans", sans-serif
   font-size: 12px
+  color: #000000
+  margin: 0
 
 @mixin content
   margin: 0 50px 45px 0
