--- a/dev/blocks/navbar/navbar.sass
+++ b/dev/blocks/navbar/navbar.sass
@@ -3,22 +3,22 @@
 .navbar
   width: 100%
 
-.navbar__btn
+.menu-btn
   display: none
 
-.navbar__list
+.menu
   margin: 0
   height: 72px
   display: flex
   justify-content: flex-end
   align-items: center
 
-.navbar__item
+.menu-item
   @include header
   padding-left: 25px
   list-style: none
 
-.navbar__link
+.menu-item a
   font-size: 16px
   color: $noactive-color
   text-decoration: none
@@ -26,40 +26,41 @@
   &:hover
     color: $pale-color
 
-.navbar__link_active
+.current-menu-item a
   color: $base-color
   cursor: default
   &:hover
     color: $base-color
-  .navbar__link_last
-    color: $pale-color
+
+.current-menu-item a span
+  color: $pale-color
 
 @media screen and (max-width: 680px)
-  .navbar__item
+  .menu-item
     padding-left: 20px
 
 @media screen and (max-width: 560px)
-  .navbar__list
+  .menu
     height: 64px
 
-  .navbar__item
+  .menu-item
     padding-left: 15px
 
-  .navbar__link
+  .menu-item a
     font-size: 15px
 
 @media screen and (max-width: 480px)
-  .navbar__list
+  .menu
     height: 60px
 
-  .navbar__item
+  .menu-item
     padding-left: 10px
 
-  .navbar__link
+  .menu-item a
     font-size: 14px
 
-@media screen and (max-width: 400px)
-  .navbar__btn
+@media screen and (max-width: 420px)
+  .menu-btn
     display: block
     position: absolute
     right: 0
@@ -71,15 +72,15 @@
     color: $noactive-color
     transition: color 500ms
 
-  .navbar__btn:hover
+  .menu-btn:hover
     color: $pale-color
 
-  .navbar__btn_blink
+  .menu-btn-blink
     color: $base-color
     &:hover
       color: $base-color
 
-  .navbar__list
+  .menu
     padding: 0
     display: flex
     height: 0
@@ -94,19 +95,19 @@
     transition: height 500ms
     z-index: 1
 
-  .navbar__list_active
+  .menu-drapdown
     opacity: 1
     z-index: 20
     height: 246px
 
-  .navbar__item
+  .menu-item
     width: 100%
     height: 100%
     border-top: 1px dotted $menu-bd-color
     &:last-child
       border-bottom: 1px dotted $menu-bd-color
 
-  .navbar__link
+  .menu-link
     display: block
     width: 85%
     position: relative
