--- a/dev/blocks/sidebar/sidebar.pug
+++ b/dev/blocks/sidebar/sidebar.pug
@@ -1,18 +1,21 @@
 .sidebar
-    - var section_title = 'about jetro'
-    include ../s-line/s-line
-    .sidebar__section
-        p.sidebar__text Lorem ipsum dolor sit amet, consetur adipisicing elit. Asperiores aut dignissimos error,
-            |libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus.
-    - var section_title = 'categories'
-    include ../s-line/s-line
-    .sidebar__section
-        ul.sidebar__list
-            li Video (3)
-            li Sport (5)
-            li Media (2)
-            li Entartaiment (7)
-            li Life (4)
-            li Super Coll Stuff (8)
-    - var section_title = 'photo gallery'
-    include ../s-line/s-line
+    .side.widget.widget_text(id="text-2")
+        h3.widget-title about jetro
+        .textwidget
+            p Lorem ipsum dolor sit amet, consetur adipisicing elit. Asperiores aut dignissimos error,
+                |libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus.
+    .side.widget.widget_categories(id="categories-3")
+        h3.widget-title categories
+        ul
+            li.cat-item
+                a(href='#') Video (3)
+            li.cat-item
+                a(href='#') Sport (5)
+            li.cat-item
+                a(href='#') Media (2)
+            li.cat-item
+                a(href='#') Entartaiment (7)
+            li.cat-item
+                a(href='#') Life (4)
+            li.cat-item
+                a(href='#') Super Coll Stuff (8)
