--- a/dev/blocks/thumbs/thumbs.sass
+++ b/dev/blocks/thumbs/thumbs.sass
@@ -13,7 +13,7 @@
     margin-right: 0
 
 .thumbs__img
-  display: block
+  vertical-align: middle
   transition: opacity 200ms
   width: 100%
   height: 100%
