--- a/dev/pug/contact.pug
+++ b/dev/pug/contact.pug
@@ -7,4 +7,5 @@ body
         .content
             include ../blocks/navbar/navbar
             include ../blocks/title/title
+            include ../blocks/contact/contact
         include ../blocks/footer/footer
