develop #4 fixed bugs

--- a/dev/blocks/about/about.pug
+++ b/dev/blocks/about/about.pug
@@ -1,4 +1,4 @@
-.container.about
+.container.container_flex.about
     .about__content
         p.about__text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut dignissimos error, illum
             |maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum porro praesentium sed
