--- a/dev/blocks/contact/contact.pug
+++ b/dev/blocks/contact/contact.pug
@@ -1,4 +1,4 @@
-.container.contact
+.container.container_flex.contact
     .contact__content
         .map.media
             iframe(src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13852.846015172889!2d-106" +
