--- a/dev/blocks/contact/contact.sass
+++ b/dev/blocks/contact/contact.sass
@@ -32,3 +32,10 @@
 
   .contact__content
     margin-right: 0
+
+@media screen and (max-width: 480px)
+  .feedback
+    flex-direction: column
+
+  .feedback__contacts
+    margin-bottom: 20px
