--- a/dev/blocks/logo/logo.sass
+++ b/dev/blocks/logo/logo.sass
@@ -4,9 +4,13 @@
   font-family: Bebas, sans-serif
   text-transform: uppercase
   font-size: 36px
-  height: 72px
+  height: 78px
   display: flex
   align-items: center
+
+.logo__first, .logo__last
+  position: relative
+  top: .1em
 
 .logo__first
   color: $base-color
