--- a/dev/blocks/portfolio/portfolio.sass
+++ b/dev/blocks/portfolio/portfolio.sass
@@ -9,6 +9,7 @@
   display: flex
   margin-top: 10px
   margin-bottom: 35px
+  flex-wrap: wrap
 
 .portfolio__cat
   @include header
@@ -68,7 +69,7 @@
   font-size: 10px
 
 @media screen and (max-width: 950px)
-  .portfolio
+  .work-list
     justify-content: space-around
 
   .work-card
