--- a/dev/blocks/recent/recent.pug
+++ b/dev/blocks/recent/recent.pug
@@ -1,3 +1,6 @@
+.container.h-line
+    .h-line__text recent works
+    .h-line__img
 .container.work-list
     .work-card
         a.work-card__link(href='#')
