--- a/dev/blocks/container/container.sass
+++ b/dev/blocks/container/container.sass
@@ -1,7 +1,12 @@
 .container
-  display: flex
   width: 940px
   margin: auto
+
+.container_flex
+  display: flex
+
+.container_relative
+  position: relative
 
 @media screen and (max-width: 975px)
   .container
