--- a/dev/blocks/form/form.sass
+++ b/dev/blocks/form/form.sass
@@ -2,6 +2,8 @@
 
 .form
   flex: 2
+  display: flex
+  flex-direction: column
 
 .form__textarea, .form__text
   outline: none
@@ -26,12 +28,12 @@
 .form__textarea
   overflow: auto
   resize: none
-  width: 100%
   margin-bottom: 5px
   padding: 10px
 
 .form__submit
   @include header
+  width: 75px
   color: #ffffff
   background: $base-color
   border: 1px solid $base-color
