--- a/dev/blocks/mixins.sass
+++ b/dev/blocks/mixins.sass
@@ -24,3 +24,10 @@ $trans-bg-color: rgba(232, 96, 58, 0.8)
 @mixin content
   margin: 0 50px 45px 0
   flex: 3
+
+@mixin bottom-line
+  position: relative
+  left: 0
+  height: 14px
+  width: 100%
+  background: url("../img/s_line.png") repeat-x left
