--- a/dev/blocks/navbar/navbar.sass
+++ b/dev/blocks/navbar/navbar.sass
@@ -1,6 +1,8 @@
 @import "../mixins"
 
 .navbar
+  position: absolute
+  top: 0
   width: 100%
 
 .menu-btn
@@ -8,7 +10,7 @@
 
 .menu
   margin: 0
-  height: 72px
+  height: 78px
   display: flex
   justify-content: flex-end
   align-items: center
@@ -60,6 +62,9 @@
     font-size: 14px
 
 @media screen and (max-width: 420px)
+  .navbar
+    position: static
+
   .menu-btn
     display: block
     position: absolute
@@ -86,7 +91,7 @@
     height: 0
     overflow: hidden
     width: 100%
-    position: absolute
+    //position: relative
     top: 55px
     left: 0
     flex-direction: column
