--- a/dev/blocks/article-preview/article-preview.pug
+++ b/dev/blocks/article-preview/article-preview.pug
@@ -8,7 +8,7 @@
             | qui quibusdam soluta voluptatum! Accusamus alias aliquid commodi dignissimos dolorem dolores
             | dolorum eos eum, ex natus omnis optio quia repellat reprehenderit sed suscipit tenetur totam vero
             | voluptate voluptates?
-        a.article-preview__more(href='#') More
+        a.button.button_more(href='#') More
     .article-preview__section
         i.article-preview__icon.icon-ok
         h2.article-preview__header offer top notch quality  work &amp; services
@@ -18,7 +18,7 @@
             | voluptatibus voluptatum. Distinctio, eius itaque molestias sint sunt ullam. Dicta dolores, ea
             | fuga iste quo vitae. A at aut earum magni modi natus nemo obcaecati quisquam repellat sequi unde,
             | voluptate!
-        a.article-preview__more(href='#') More
+        a.button.button_more(href='#') More
     .article-preview__section
         i.article-preview__icon.icon-user
         h2.article-preview__header follow me on twitter, facebook &amp; pinterest
@@ -28,4 +28,4 @@
             | Accusamus doloremque laudantium libero magni placeat praesentium provident, quas repellendus
             | sequi unde? Asperiores cum eum, explicabo fugit laudantium ratione reiciendis! Accusantium animi
             | asperiores in quas, quasi ullam voluptates!
-        a.article-preview__more(href='#') More
+        a.button.button_more(href='#') More
