--- a/dev/blocks/navbar/navbar.pug
+++ b/dev/blocks/navbar/navbar.pug
@@ -1,8 +1,8 @@
-.container.container_relative
+.container.navbar
     .logo
         span.logo__first jet
         span.logo__last ro
-    nav.navbar
+    nav.menubar
         .menu-btn
             i.icon-menu
         ul.menu
