--- a/dev/blocks/portfolio/portfolio.sass
+++ b/dev/blocks/portfolio/portfolio.sass
@@ -37,6 +37,7 @@
   display: flex
   justify-content: space-between
   flex-wrap: wrap
+  margin-bottom: 20px
 
 .work-card
   box-sizing: border-box
