--- a/dev/blocks/form/form.pug
+++ b/dev/blocks/form/form.pug
@@ -3,4 +3,4 @@
     input.form__text(type="text", placeholder="lastname")
     input.form__text(type="text", placeholder="emailaddress")
     textarea.form__textarea(rows=10, placeholder="message")
-    input.form__submit(type="submit")
+    input.button.button_submit(type="submit")
