develop #9 add babel

--- a/dev/blocks/fonts-styles/fonts.sass
+++ b/dev/blocks/fonts-styles/fonts.sass
@@ -1,7 +1,5 @@
 @font-face
   font-family: "Bebas"
-  src: url('../font/bebas.woff2') format('woff2'),
-  url('../font/bebas.woff') format('woff'),
-  url('../font/bebas.ttf') format('truetype')
+  src: url('../fonts/bebas.woff2') format('woff2'), url('../fonts/bebas.woff') format('woff'), url('../fonts/bebas.ttf') format('truetype')
   font-weight: normal
   font-style: normal
