develop #9 add babel

--- a/dev/blocks/blog/blog.pug
+++ b/dev/blocks/blog/blog.pug
@@ -34,7 +34,8 @@
                     .blog__info-title comments
                     .blog__info-text 4
                 .blog__article
-                    h2.blog__header top wordpress themes of 2012
+                    a.blog__post-link(href="post.html")
+                        h2.blog__header top wordpress themes of 2012
                     p Consectetur adipisicing elit. Asperiores aut digniss
                         | libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum
                         | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem
@@ -61,7 +62,7 @@
                     .blog__info-text 4
                 .blog__article
                     a.blog__post-link(href="post.html")
-                        h2.blog__header top wordpress themes of 2012
+                        h2.blog__header jesus typography wallpaper giveaway!
                     p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut digniss
                         | libero maiores molestiae reiciendis! Alias, amet autem commodi consequuntur cupiditate
                         | eligendi excepturi expedita fuga fugiat fugit illo itaque magnam nemo qui quisquam rem se
@@ -88,7 +89,7 @@
                     .blog__info-title comments
                     .blog__info-text 4
                 .blog__article
-                    h2.blog__header top wordpress themes of 2012
+                    h2.blog__header le sommet bleu
                     p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut digniss
                         | libero maiores molestiae reiciendis! Alias, amet autem commodi consequuntur cupiditate
                         | eligendi excepturi expedita fuga fugiat fugit illo itaque magnam nemo qui quisquam rem
@@ -111,7 +112,8 @@
                 i.blog__icon.icon-link
             .blog__text
                 .blog__article
-                    h2.blog__header some of the best freebies on the web.
+                    a.blog__post-link(href="post.html")
+                        h2.blog__header some of the best freebies on the web.
                     .blog__link
                         a(href="#") www.bestpsdfreebies.com
                         p Adipisci aliquid consequatur doloribus et ipsum porro
