--- a/dev/blocks/post/post.pug
+++ b/dev/blocks/post/post.pug
@@ -1,7 +1,9 @@
 .container.container_flex
     .post
         .post__content
-            h2.post__header top wordpress themes of 2012
+            .post__pic
+                img(src="img/jesus.png")
+            h2.post__header jesus typography wallpaper giveaway!
             .post__info
                 .post__info-meta
                     .post__info-title date
