--- a/dev/blocks/post/post.sass
+++ b/dev/blocks/post/post.sass
@@ -8,6 +8,11 @@
 .post__content
   @include content
 
+.post__pic
+  img
+    height: 100%
+    margin-bottom: 40px
+
 .post__header
   @include header
   font-size: 20px
