--- a/dev/pages/contact.pug
+++ b/dev/pages/contact.pug
@@ -1,4 +1,5 @@
-- var page_title = 'Contact Us'
+- var pageTitle = 'Contact Us'
+- var activeIndex = 4
 doctype html
 html(lang="en")
 include tmpl/head
