--- a/dev/blocks/fonts-styles/awesome.css
+++ b/dev/blocks/fonts-styles/awesome.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'awesome';
-  src: url('../font/awesome.eot?57818113');
-  src: url('../font/awesome.eot?57818113#iefix') format('embedded-opentype'),
-       url('../font/awesome.woff2?57818113') format('woff2'),
-       url('../font/awesome.woff?57818113') format('woff'),
-       url('../font/awesome.ttf?57818113') format('truetype'),
-       url('../font/awesome.svg?57818113#awesome') format('svg');
+  src: url('../fonts/awesome.eot?57818113');
+  src: url('../fonts/awesome.eot?57818113#iefix') format('embedded-opentype'),
+       url('../fonts/awesome.woff2?57818113') format('woff2'),
+       url('../fonts/awesome.woff?57818113') format('woff'),
+       url('../fonts/awesome.ttf?57818113') format('truetype'),
+       url('../fonts/awesome.svg?57818113#awesome') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'awesome';
-    src: url('../font/awesome.svg?57818113#awesome') format('svg');
+    src: url('../fonts/awesome.svg?57818113#awesome') format('svg');
   }
 }
 */
