--- a/dev/pages/about.pug
+++ b/dev/pages/about.pug
@@ -1,4 +1,5 @@
-- var page_title = 'About Us'
+- var pageTitle = 'About Us'
+- var activeIndex = 1
 doctype html
 html(lang="en")
 include tmpl/head
