--- a/dev/pages/portfolio.pug
+++ b/dev/pages/portfolio.pug
@@ -1,4 +1,5 @@
-- var page_title = 'Portfolio'
+- var pageTitle = 'Portfolio'
+- var activeIndex = 3
 doctype html
 html(lang="en")
 include tmpl/head
