--- a/dev/pages/tmpl/head.pug
+++ b/dev/pages/tmpl/head.pug
@@ -1,6 +1,6 @@
 head
     meta(charset="UTF-8")
     meta(name = "viewport" content = "width=device-width, initial-scale=1")
-    title Jetro - #{page_title}
+    title Jetro - #{pageTitle}
     link(rel="stylesheet" href="css/index.css")
     script(src="js/index.js")
